--- a/assests/style.css
+++ b/assests/style.css
@@ -1,4 +1,4 @@
-body {
+h1 {
     text-align: center;
 }
 
@@ -10,9 +10,15 @@ body {
 
 .recipe-card {
     border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 1em;
     width: 30%;
     max-width: 350px;
     margin: 1em 0;
+    text-align: center;
+}
+
+img {
+    width: 250px;
+    object-fit: cover;
 }
