feat/Add styling

--- a/assests/style.css
+++ b/assests/style.css
@@ -1,5 +1,10 @@
 h1 {
     text-align: center;
+    color: #4e5283;
+}
+
+h2 {
+    color: #4e5283;
 }
 
 .container{
@@ -9,16 +14,59 @@ h1 {
 }
 
 .recipe-card {
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 1em;
+    border-radius: 20px;
+    padding: 2em;
     width: 30%;
     max-width: 350px;
     margin: 1em 0;
     text-align: center;
+    background-color: #f7eae1;
+    color: #091f05;
+    transition: all .2s ease-in-out; 
+}
+
+a {
+    text-decoration: none;
+    color: #091f05;
+}
+
+.recipe-card:hover {
+    transform: scale(1.05);
 }
 
 img {
     width: 250px;
     object-fit: cover;
+    border-radius: 1em;
+}
+
+body{
+    background-color:#fdf9f6;
+    font-family: "Outfit", serif;
+    color: #091f05;
+}
+
+.modal {
+    background-color: #dcebdb;
+    width: fit-content;
+    padding: 5px 10px;
+    border-radius: 14%;
+}
+
+.main-recipe {
+    display: flex;
+}
+
+.recipe-part {
+    justify-content: space-around;
+    margin: 0 1em;
+}
+
+.info-bar{
+    background-color: #fdf2e9;
+    width: fit-content;
+    padding: 1em;
+    margin-top: 1em;
+    border-radius: 10px;
+    border: 2px solid #091f05;
 }
